# colony

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  PRIVACY.md  README.md  REQUIREMENTS.md  build.rs  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  release.yml
colony-app/: package-lock.json  package.json  vite.config.js
colony-app/src/: app.css
colony-app/src-tauri/: Cargo.toml  tauri.conf.json
colony-app/src-tauri/src/: lib.rs
colony-app/src/components/: footer.svelte  header.svelte  seedPhrase.svelte
colony-app/src/routes/: +layout.svelte  +page.svelte
colony-app/src/routes/screens/: +layout.svelte  +page.svelte
colony-app/src/routes/screens/app-info/: +page.svelte
colony-app/src/routes/screens/pod-management/uploads/: +page.svelte
colony-app/src/routes/screens/search/: +page.svelte
colony-app/src/routes/welcome-intro/: +layout@.svelte  +page.svelte
src/: app.css  app.d.ts  config.rs  data.rs  main.rs  network.rs
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.appstore.plist  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/binaries/: .gitignore  README.md  fetch_binaries.sh
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/classes/: FileObj.ts
src/components/: AddressDisplay.svelte  CachedTabulator.svelte  InsufficientBalanceDialog.svelte  MobileBottomNav.svelte  MobileHamburgerMenu.svelte  drawer.svelte  footer.svelte  header.svelte  login.svelte  seedPhrase.svelte  tabulator.svelte  testCols.js  testData.js  testDataSearch.js  themeSwitcher.svelte  toast.svelte
src/components/steps/: StepFinish.svelte  StepPreferences.svelte  StepSeedPhraseConfirm.svelte  StepSeedPhraseInit.svelte  StepWallet.svelte  StepWelcome.svelte
src/lib/components/docs/: github-icon.svelte  index.ts  mode-toggle.svelte  site-header.svelte
src/lib/components/docs/icons/: index.ts  logo.svelte  logo.svelte.orig
src/lib/components/docs/nav/: index.ts  main-nav.svelte
src/lib/config/: site.ts
src/pages/: welcome.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/profile/: +page.svelte
src/routes/screens/: +layout.svelte
src/routes/screens/app-info/: +page.svelte
src/routes/screens/configuration/: +page.svelte
src/routes/screens/pod-management/downloads/: +page.svelte
src/routes/screens/pod-management/uploads/: +page.svelte
src/routes/screens/pod-management/your-pods/: +page.svelte
src/routes/screens/search/: +page.svelte
src/routes/screens/status/: +page.svelte
src/routes/screens/test/: +page.svelte
src/routes/screens/wallet/: +page.svelte
src/routes/upload/: +page.svelte
src/routes/user-intro/: +page.svelte
src/routes/welcome-intro/: +layout@.svelte  +page.svelte
src/stores/: downloadManager.ts  globals.ts  persistantStorage.ts  searchState.ts  tabulatorCache.ts  toast.ts  transferManager.ts
src/utils/: copyAutonomiAddress.ts  fileFormaters.ts  responsive.js  searchColumns.js
src/utils/anttp/: anttpCommands.ts
src/utils/colony/: initColony.ts
src/utils/dweb/: dwebCommands.ts
src/utils/file/: download.ts  openFile.ts
src/utils/password/: session.ts
src/utils/pod-management/: jsonLDTemplates.ts  parseSubjectData.ts
src/utils/search/: parseSparql.ts  searchColumns.js  searchColumns.ts  statusColumns.ts  statusTestData.js
src/utils/theme/: daisyUIThemes.ts
src/utils/wallet/: getPrimaryWallet.ts
static/css/: tabulator.min.css  tabulator_midnight.min.css
ui/: colonies.slint  config.slint  download.slint  item.slint  main.slint  search.slint  setup.slint  upload.slint  wallet.slint
