[package]
name = "colony"
version = "0.1.0"
authors = ["Chuck McClish"]
edition = "2021"
build = "build.rs"
license = "GPL-3.0-only"
description = "Colony file-sharing application for Autonomi"
categories = ["development-tools::cargo-plugins"]
keywords = ["autonomi", "colony", "gui"]
repository = "https://github.com/zettawatt/colony"

[features]
slint-backend-default = ["slint/backend-default", "slint/renderer-femtovg"]
slint-backend-qt = ["slint/backend-qt"]
slint-backend-gl-all = ["slint/backend-winit", "slint/renderer-winit-femtovg"]
slint-backend-gl-wayland = ["slint/backend-winit-wayland", "slint/renderer-winit-femtovg"]
slint-backend-gl-x11 = ["slint/backend-winit-x11", "slint/renderer-winit-femtovg"]

default = ["slint-backend-default"]

[dependencies]
autonomi = "0.4.3"
bip39 = {version = "2.1.0", features = ["rand"]}
cocoon = "0.4.3"
dirs = "6.0.0"
serde = "1.0.219"
slint = "1.8.0"
toml = "0.8.20"

[build-dependencies]
slint-build = "1.8.0"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1

[profile.dev]
opt-level = 1
